feat(cloud): make cold starts immediately interactive
